# ChangeLog for media-video/mpv
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/mpv/ChangeLog,v 1.92 2014/08/10 17:35:33 ago Exp $

  10 Aug 2014; Agostino Sarubbo <ago@gentoo.org> mpv-0.3.10.ebuild:
  Stable for x86, wrt bug #514906

  08 Aug 2014; Agostino Sarubbo <ago@gentoo.org> mpv-0.3.10.ebuild:
  Stable for sparc, wrt bug #514906

  02 Aug 2014; Agostino Sarubbo <ago@gentoo.org> mpv-0.3.10.ebuild:
  Stable for ppc64, wrt bug #514906

*mpv-0.4.2 (27 Jul 2014)

  27 Jul 2014; Mikle Kolyada <zlogene@gentoo.org> +mpv-0.4.2.ebuild:
  Version bump, thanks to Nikoli

  20 Jul 2014; Mikle Kolyada <zlogene@gentoo.org> mpv-9999.ebuild:
  Respect cflags, thanks to Nikoli

*mpv-0.4.1 (14 Jul 2014)

  14 Jul 2014; Maxim Koltsov <maksbotan@gentoo.org> +mpv-0.4.1.ebuild,
  -mpv-0.4.0.ebuild:
  Bump to 0.4.1, thanks to Nikoli.

  13 Jul 2014; Agostino Sarubbo <ago@gentoo.org> mpv-0.3.10.ebuild:
  Stable for ppc, wrt bug #514906

  10 Jul 2014; Maxim Koltsov <maksbotan@gentoo.org> metadata.xml,
  mpv-0.4.0.ebuild, mpv-9999.ebuild:
  Restore libmpv useflag, now in ebuild too. Bug #516742.

  10 Jul 2014; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Remove unneeded useflag description from metadata.xml

*mpv-0.4.0 (09 Jul 2014)
*mpv-0.3.11 (09 Jul 2014)

  09 Jul 2014; Maxim Koltsov <maksbotan@gentoo.org>
  +files/mpv-0.3.11-libav-9.patch, +mpv-0.3.11.ebuild, +mpv-0.4.0.ebuild,
  metadata.xml, mpv-9999.ebuild:
  Bump to 0.4.0, bug #516458, add libmpv use flag, bug #516742. Thanks to
  Nikoli.

  08 Jul 2014; Mikle Kolyada <zlogene@gentoo.org> mpv-0.3.10.ebuild:
  amd64 stable wrt bug #514906

  20 Jun 2014; Maxim Koltsov <maksbotan@gentoo.org> mpv-9999.ebuild:
  Update waf version and SRC_URI in 9999, thanks to Nikoli.

  17 Jun 2014; Maxim Koltsov <maksbotan@gentoo.org> mpv-9999.ebuild:
  Update lcms dependency in 9999, thanks to Nikoli.

  02 Jun 2014; Tom Wijsman <TomWij@gentoo.org> mpv-9999.ebuild: