@@ -1,2 +1,2 @@
-DIST mpv-0.4.2.tar.gz 2564354 SHA256 791e9d60508a6e8b5690fb945ed24ddc805d6150783690cffe567f7ae0146199 SHA512 2d13f115c9ee5193ff79a3cf226a336f65ebabe4a828e75bb3269e39f0ed537d4f7cedc8155359aacc9e8fb31f875570b267567547eb0e0c8983a2c6e572a732 WHIRLPOOL d1db162086b97ca2f5a6edbfe4927626025a45aafb5205d88c02a02f8fa572d6c8f798421f0286bf715ef4eb947372a09d0b3fd6501143bbdd371a1144494d33
+DIST mpv-0.5.0.tar.gz 2577656 SHA256 263d105c1707ae5fb9eedac030b4f8f4e6e3f9c000c074c615397a54bb61b59e SHA512 d0ad5e8e55582e8a998b751d7786bc82fd0be09043dd993f6eb3c564492990a923dbb1dfa72f145758515924aa922a3877cfa90c7139b508b324216dd9f8e9a7 WHIRLPOOL 278d81452a3fb2d563620f52244c54a88bf418e93afbb8a5ee14b3c35751587e235be8f4f22c2eae093061787beeaefba465ef65ca85817e631eec5359a67e86
 DIST waf-1.7.16 91846 SHA256 b64dc26c882572415fd450b745006107965f3fe17b357e3eb43d6676c9635a61 SHA512 ccdf27cac76f525e11bde20d01c3f81b738b4c990934ee290a390fcf1b278da05047bcee76973c80be4557689344f6df33c13e232b278258745e2f19eeed5ebf WHIRLPOOL 79b59876606a93c7a13548799c8797f40515cbf8bc2944018de758df3e8cd9698e4304d5d26a03ae883195ec02d6e0b12e6fc7160e4ef31446d7c3d05f98983a
