@@ -1,6 +1,12 @@
 # ChangeLog for media-video/mpv
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/mpv/ChangeLog,v 1.92 2014/08/10 17:35:33 ago Exp $
+# $Header: $
+
+*mpv-0.5.0 (16 Aug 2014)
+
+  16 Aug 2014; Poncho <poncho@spahan.ch> +mpv-0.5.0.ebuild, -mpv-0.4.2.ebuild,
+  -mpv-9999.ebuild, metadata.xml:
+  media-video/mpv: version bump
 
   10 Aug 2014; Agostino Sarubbo <ago@gentoo.org> mpv-0.3.10.ebuild:
   Stable for x86, wrt bug #514906
